# PlanningOs

./: .gitignore  Cargo.toml  README.md  generate.py  package.json  planning_2026.xlsx  turbo.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: theme-provider.tsx
apps/web/src/components/layout/: auth-layout.tsx  dashboard-layout.tsx  header.tsx  sidebar.tsx
apps/web/src/components/planning/: planning-grid.tsx  shift-cell-editor.tsx
apps/web/src/components/ui/: toaster.tsx
apps/web/src/features/admin/pages/: agents-page.tsx  shift-types-page.tsx
apps/web/src/features/auth/pages/: login-page.tsx  register-page.tsx
apps/web/src/features/dashboard/pages/: dashboard-page.tsx
apps/web/src/features/leave/pages/: leave-requests-page.tsx
apps/web/src/features/planning/pages/: planning-page.tsx
apps/web/src/features/schedule/pages/: my-schedule-page.tsx
apps/web/src/hooks/: use-api.ts  use-toast.ts
apps/web/src/lib/: api-client.ts  utils.ts
apps/web/src/stores/: auth-store.ts
apps/web/src/styles/: globals.css
apps/web/src/types/: api.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INIT_GIT.md  NEON_SETUP.md  SETUP_DEV.md
scripts/: setup-db.sh
