# PlanningOS - Rust Workspace
# Manages all Rust packages in the monorepo

[workspace]
resolver = "2"
members = [
    "packages/api",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
authors = ["PlanningOS Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/fs0ciety7000/PlanningOs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth
jsonwebtoken = "9.3"
argon2 = "0.5"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Tauri
tauri = "2.2"
tauri-build = "2.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
