[package]
name = "planningos-desktop"
version = "0.1.0"
description = "PlanningOS Desktop Application"
authors = ["PlanningOS Team"]
edition = "2021"
license = "MIT"

[lib]
name = "planningos_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
